fixed extra spacing on the right side

--- a/css/landing.css
+++ b/css/landing.css
@@ -134,7 +134,7 @@ font-size: 18px;
 }
 
 .box-secondary-footer {
-    padding: 40px 40px 40px 40px;
+    /* padding: 40px 40px 40px 40px; */
 }
 
 /* END SECONDARY FOOTER */
