--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 html, body {
     font-family: 'Montserrat', sans-serif;
     height: 100%;
+    width: 100%;
     background-color: #F3F4F3;
 }
 
